add first 3 tasks

--- a/Less01/HW_chumak.ipynb
+++ b/Less01/HW_chumak.ipynb
@@ -1,6 +1,94 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1. Задание (на листочке)\n",
+    " Вычислите матирцу\n",
+    "Ответ (решение см в pdf):\n",
+    "45,  90\n",
+    "63,  108\n",
+    "101,7, 45\n",
+    "200, 270 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2.1. Задание (на листочке) -  Решите систему уравнений:\n",
+    "3x – 2y + 5z = 7\n",
+    "7x + 4y – 8z = 3\n",
+    "5x – 3y – 4z = –12\n",
+    "4z=12+5x-3y\n",
+    "7x+4y-2(12-5x-3y) = 3\n",
+    "5x – 3y – (12-5x-3y) = –12\n",
+    "7x+4y – 24 +10x+6y = 3\n",
+    "5x-3y - 12 +5x+3y = -12\n",
+    "17x+10y = 27\n",
+    "10x= 0\n",
+    "x=0\n",
+    "10y=27\n",
+    "y=2,7\n",
+    "4z=12+0-8,1\n",
+    "Z = 3,9/4=0,975\n",
+    "\n",
+    "Линейная или нелинейная это система? \n",
+    "линейная\n",
+    "А каждое уравнение по отдельности?\n",
+    "линейное\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2.2. Задание (на листочке) - Решите систему уравнений:\n",
+    "x2 + y∙x – 9 = 0\n",
+    "x – y/5 = 0\n",
+    "x=y/5\n",
+    "(y/5)2 +y* y/5-9=0\n",
+    "y2/25+y2/5-9=0\n",
+    "y2/25+5y2/25-9=0\n",
+    "6y2/25=9\n",
+    "y2=9*25/6\n",
+    "y=√37,5=6,123\n",
+    "x=6,123/5=1,22\n",
+    "Линейная или нелинейная это система? \n",
+    "нелинейная\n",
+    "А каждое уравнение по отдельности?\n",
+    "1-\tНелинейное\n",
+    "2-\tлинейное\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Задание (на листочке) - Решите задачу:\n",
+    "Площадь пола прямоугольной комнаты равна 48 м2,а его периметр равен 28 м. Найдите длину и ширину комнаты.\n",
+    "x*y=48\n",
+    "2x+2y=28\n",
+    "2x=28-2y\n",
+    "x=14-y\n",
+    "(14-y)*y=48\n",
+    "14y-y2-48=0\n",
+    "y2-14y+48=0\n",
+    "D=14*14-4*1*48=4\n",
+    "x1=(14+2)/2=8\n",
+    "x2=(14-2)/2=6\n",
+    "у=14-8 (или 6)\n",
+    "комната 6х8\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
